# FocusPath

./: .gitignore  AliHaydarSucu.txt  AlpdoganKurt.txt  BurakSemihBileci.txt  CMakeLists.txt  COMMIT_MESSAGE.txt  FocusCard.cpp  FocusCard.h  GraphicGenerator.cpp  GraphicGenerator_header_and_structs.h  GraphicGenerator_new.cpp  LICENSE  MehmetFatihSenal  MehmetFatihSenal.txt  README.md  WorkflowCard.cpp  WorkflowCard.h  app_usage_analyzer.cpp  app_usage_analyzer.hpp  appcard.cpp  attention_analyzer.cpp  attention_analyzer.hpp  clickableframe.cpp  clickableframe.h  clickablelabel.cpp  clickablelabel.h  countdownwidget.cpp  countdownwidget.h  customslider.cpp  dashboardpage.cpp  efficiency_meter.cpp  efficiency_meter.hpp  emoji_selector.cpp  emoji_selector.h  historypage.cpp  historypage.h  imagecard.cpp  inputwindow.cpp  inputwindow.h  log_parser.cpp  (+24 more)
inputWindow/: CMakeLists.txt  inputwindow.cpp  inputwindow.h  main.cpp
src/: main.cpp
src/core/: AppUsageAnalyzer.cpp  AttentionAnalyzer.cpp  AttentionAnalyzer.hpp  EfficiencyMeter.cpp  EfficiencyMeter.hpp  LogParser.cpp  LogParser.hpp  SystemController.cpp  SystemController.hpp  SystemHandler.cpp  SystemHandler.hpp  WindowTracker.cpp  WindowTracker.hpp  Workflow.cpp  Workflow.h
src/ui/: AppCard.cpp  AppCard.h  ClickableFrame.cpp  ClickableFrame.h  ClickableLabel.cpp  CountdownWidget.cpp  CustomSlider.cpp  CustomSlider.h  DashboardPage.cpp  DashboardPage.h  EmojiSelector.cpp  HistoryPage.cpp  HistoryPage.h  ImageCard.cpp  ImageCard.h  InputWindow.cpp  InputWindow.h  MainWindow.cpp  MainWindow.h  OutputWindow.cpp  OutputWindow.h  ResultPage.cpp  ResultPage.h  TemplatesPage.cpp  TemplatesPage.h  WorkflowCard.cpp  WorkflowCard.h  WorkflowPage.cpp  WorkflowPage.h  WorkflowSetupPage.cpp  WorkflowSetupPage.h
src/utils/: GraphicGenerator.cpp
